--- a/Project2/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Project2/View/Storyboard/Base.lproj/Main.storyboard
@@ -429,6 +429,7 @@
                         <outlet property="designView" destination="G2c-KZ-Yq1" id="Bz7-jI-hKY"/>
                         <outlet property="fontSizeBtn" destination="vtx-GG-yF4" id="mME-33-hhP"/>
                         <outlet property="fontTableView" destination="hlx-JU-8Ak" id="gXA-I8-eLn"/>
+                        <outlet property="imageEditContainerView" destination="eE4-nX-key" id="1L3-L3-zrS"/>
                         <outlet property="italicButton" destination="Oyb-zP-bPa" id="E5H-ac-N6M"/>
                         <outlet property="letterCaseButton" destination="w0y-2d-Q2k" id="iXK-ov-pAx"/>
                         <outlet property="textEditView" destination="Yke-94-yj6" id="6x1-h4-UMb"/>
