--- a/Project2/View/Text/SpacingTableViewCell.xib
+++ b/Project2/View/Text/SpacingTableViewCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="107" id="KGk-i7-Jjw" customClass="SpacingTableViewCell" customModule="Project2" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="439" height="107"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="110" id="KGk-i7-Jjw" customClass="SpacingTableViewCell" customModule="Project2" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="439" height="110"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="439" height="106.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="439" height="109.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1.3999999999999999" minValue="0.0" maxValue="6" translatesAutoresizingMaskIntoConstraints="NO" id="NVy-aM-PVz">
@@ -30,7 +30,7 @@
                         </connections>
                     </slider>
                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="7" translatesAutoresizingMaskIntoConstraints="NO" id="RKK-cI-RGp">
-                        <rect key="frame" x="138" y="60" width="243" height="27.5"/>
+                        <rect key="frame" x="138" y="60" width="243" height="30.5"/>
                         <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                         <connections>
                             <action selector="slideLetterSpacing:" destination="KGk-i7-Jjw" eventType="valueChanged" id="t6t-ZN-6OW"/>
@@ -46,7 +46,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Letter spacing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Mb-T4-KNi">
-                        <rect key="frame" x="20" y="60" width="110" height="26.5"/>
+                        <rect key="frame" x="20" y="60" width="110" height="29.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="110" id="8XS-6c-Na0"/>
                         </constraints>
@@ -65,7 +65,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LfU-bo-1l7">
-                        <rect key="frame" x="389" y="58.5" width="30" height="30"/>
+                        <rect key="frame" x="389" y="60" width="30" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -98,7 +98,7 @@
                 <outlet property="letterSpacingLabel" destination="LfU-bo-1l7" id="U11-o0-Dz4"/>
                 <outlet property="lineHeightLabel" destination="pbq-oy-ckr" id="0Ik-yM-J8n"/>
             </connections>
-            <point key="canvasLocation" x="204" y="182"/>
+            <point key="canvasLocation" x="204" y="182.60869565217394"/>
         </tableViewCell>
     </objects>
 </document>
