--- a/Project2/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Project2/View/Storyboard/Base.lproj/Main.storyboard
@@ -130,6 +130,7 @@
                             </textView>
                         </subviews>
                         <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="DZf-mM-usS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="0S2-aV-HPz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ic4-BR-cwQ" secondAttribute="bottom" constant="20" id="Ass-xM-9Rv"/>
@@ -466,34 +467,64 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="208"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wMA-6g-Hwm">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="208"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Iml-R0-9KP">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells/>
-                            </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JeK-gH-KLU">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="saX-TL-hqu">
+                                        <rect key="frame" x="20" y="9.5" width="100" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="3WJ-dr-Mfh"/>
+                                        </constraints>
+                                        <state key="normal" title="Camera Roll">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="CameraRollBtnTapped:" destination="8WY-QU-6sx" eventType="touchUpInside" id="123-kJ-uRe"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDk-lN-Nys">
+                                        <rect key="frame" x="240" y="9.5" width="60" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="JHC-0h-6vu"/>
+                                        </constraints>
+                                        <state key="normal" title="Colors">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qTQ-dc-u20">
+                                        <rect key="frame" x="150" y="9.5" width="60" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="FXF-aI-6k8"/>
+                                        </constraints>
+                                        <state key="normal" title="Filter">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="saX-TL-hqu" firstAttribute="leading" secondItem="JeK-gH-KLU" secondAttribute="leading" constant="20" id="19A-Za-w1A"/>
+                                    <constraint firstItem="qTQ-dc-u20" firstAttribute="centerY" secondItem="saX-TL-hqu" secondAttribute="centerY" id="1fG-sy-gyc"/>
+                                    <constraint firstAttribute="height" constant="49" id="47s-pr-kxW"/>
+                                    <constraint firstItem="gDk-lN-Nys" firstAttribute="centerY" secondItem="saX-TL-hqu" secondAttribute="centerY" id="5ek-5o-U0E"/>
+                                    <constraint firstItem="gDk-lN-Nys" firstAttribute="leading" secondItem="qTQ-dc-u20" secondAttribute="trailing" constant="30" id="Ce4-1a-UZK"/>
+                                    <constraint firstItem="saX-TL-hqu" firstAttribute="centerY" secondItem="JeK-gH-KLU" secondAttribute="centerY" id="TEe-k8-Agl"/>
+                                    <constraint firstItem="qTQ-dc-u20" firstAttribute="leading" secondItem="saX-TL-hqu" secondAttribute="trailing" constant="30" id="qO8-u5-bjJ"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="wMA-6g-Hwm" firstAttribute="trailing" secondItem="GWu-x6-JAE" secondAttribute="trailing" id="2nv-Th-3lO"/>
-                            <constraint firstItem="wMA-6g-Hwm" firstAttribute="leading" secondItem="GWu-x6-JAE" secondAttribute="leading" id="OEZ-4f-zqC"/>
-                            <constraint firstItem="wMA-6g-Hwm" firstAttribute="bottom" secondItem="GWu-x6-JAE" secondAttribute="bottom" id="mc3-HE-MDI"/>
-                            <constraint firstItem="wMA-6g-Hwm" firstAttribute="top" secondItem="GWu-x6-JAE" secondAttribute="top" id="xfI-Iv-azh"/>
+                            <constraint firstItem="JeK-gH-KLU" firstAttribute="leading" secondItem="GWu-x6-JAE" secondAttribute="leading" id="9go-7q-axA"/>
+                            <constraint firstItem="JeK-gH-KLU" firstAttribute="top" secondItem="GWu-x6-JAE" secondAttribute="top" id="IDg-V5-XEx"/>
+                            <constraint firstItem="JeK-gH-KLU" firstAttribute="trailing" secondItem="GWu-x6-JAE" secondAttribute="trailing" id="pbk-CZ-uX3"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GWu-x6-JAE"/>
                     </view>
-                    <connections>
-                        <outlet property="collectionView" destination="wMA-6g-Hwm" id="2Qw-P2-KOS"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hru-rT-4va" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="766" y="7"/>
+            <point key="canvasLocation" x="765.60000000000002" y="6.2968515742128943"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Eyq-Ma-FeX">
@@ -550,7 +581,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pxe-lR-41Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="837.60000000000002" y="282.4587706146927"/>
+            <point key="canvasLocation" x="838" y="310"/>
         </scene>
         <!--Image Edit Container View Controller-->
         <scene sceneID="STs-Lf-zk0">
