--- a/Project2/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Project2/View/Storyboard/Base.lproj/Main.storyboard
@@ -18,12 +18,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to edit background" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WSb-rm-uin">
-                                <rect key="frame" x="99" y="459" width="177" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2Y-E1-iHA">
+                                <rect key="frame" x="0.0" y="459" width="375" height="208"/>
+                                <connections>
+                                    <segue destination="8WY-QU-6sx" kind="embed" identifier="backgroundSegue" id="gvH-nm-dWh"/>
+                                </connections>
+                            </containerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qfP-Fw-Eth">
+                                <rect key="frame" x="0.0" y="459" width="375" height="208"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to edit background" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WSb-rm-uin">
+                                        <rect key="frame" x="99.5" y="0.0" width="176.5" height="20.5"/>
+                                        <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="WSb-rm-uin" firstAttribute="top" secondItem="qfP-Fw-Eth" secondAttribute="top" id="jZz-AE-q5f"/>
+                                    <constraint firstItem="WSb-rm-uin" firstAttribute="centerX" secondItem="qfP-Fw-Eth" secondAttribute="centerX" id="wfl-7p-DcI"/>
+                                </constraints>
+                            </view>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DZf-mM-usS">
                                 <rect key="frame" x="20" y="74" width="335" height="335"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -36,12 +53,6 @@
                                 <rect key="frame" x="0.0" y="459" width="375" height="208"/>
                                 <connections>
                                     <segue destination="AHI-tQ-ej5" kind="embed" id="eV2-Yo-FQM"/>
-                                </connections>
-                            </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2Y-E1-iHA">
-                                <rect key="frame" x="0.0" y="459" width="375" height="208"/>
-                                <connections>
-                                    <segue destination="8WY-QU-6sx" kind="embed" id="gvH-nm-dWh"/>
                                 </connections>
                             </containerView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zg0-Kt-1Ej">
@@ -133,24 +144,26 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="DZf-mM-usS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="0S2-aV-HPz"/>
+                            <constraint firstItem="qfP-Fw-Eth" firstAttribute="bottom" secondItem="k2Y-E1-iHA" secondAttribute="bottom" id="Am6-S6-wth"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ic4-BR-cwQ" secondAttribute="bottom" constant="20" id="Ass-xM-9Rv"/>
                             <constraint firstItem="MPz-Hy-TZc" firstAttribute="height" secondItem="k2Y-E1-iHA" secondAttribute="height" id="BAi-V1-QDz"/>
                             <constraint firstItem="zg0-Kt-1Ej" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BXC-mn-8V9"/>
                             <constraint firstItem="DZf-mM-usS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EOD-Bq-wnu"/>
                             <constraint firstItem="k2Y-E1-iHA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GRS-Ul-4od"/>
                             <constraint firstItem="k2Y-E1-iHA" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="KhU-Kl-S9f"/>
+                            <constraint firstItem="qfP-Fw-Eth" firstAttribute="trailing" secondItem="k2Y-E1-iHA" secondAttribute="trailing" id="LHa-8d-qoM"/>
                             <constraint firstItem="MPz-Hy-TZc" firstAttribute="top" secondItem="k2Y-E1-iHA" secondAttribute="top" id="Oei-FE-KEo"/>
-                            <constraint firstItem="WSb-rm-uin" firstAttribute="top" secondItem="k2Y-E1-iHA" secondAttribute="top" id="PWa-VO-7oF"/>
                             <constraint firstItem="k2Y-E1-iHA" firstAttribute="top" secondItem="DZf-mM-usS" secondAttribute="bottom" constant="50" id="RCg-BY-US3"/>
-                            <constraint firstItem="WSb-rm-uin" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SOq-Do-m6D"/>
                             <constraint firstItem="k2Y-E1-iHA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Whc-J1-e2J"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ic4-BR-cwQ" secondAttribute="trailing" constant="20" id="aCz-bw-aE9"/>
                             <constraint firstItem="VJC-L0-vuv" firstAttribute="centerY" secondItem="DZf-mM-usS" secondAttribute="centerY" id="exj-SI-Mra"/>
+                            <constraint firstItem="qfP-Fw-Eth" firstAttribute="leading" secondItem="k2Y-E1-iHA" secondAttribute="leading" id="hWU-Gq-sDC"/>
                             <constraint firstItem="MPz-Hy-TZc" firstAttribute="leading" secondItem="k2Y-E1-iHA" secondAttribute="leading" id="igR-WI-yET"/>
                             <constraint firstItem="zg0-Kt-1Ej" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="s4e-vF-w2d"/>
                             <constraint firstItem="VJC-L0-vuv" firstAttribute="centerX" secondItem="DZf-mM-usS" secondAttribute="centerX" id="wAc-gS-irl"/>
                             <constraint firstItem="DZf-mM-usS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="wa0-V2-l3L"/>
                             <constraint firstItem="MPz-Hy-TZc" firstAttribute="width" secondItem="k2Y-E1-iHA" secondAttribute="width" id="x64-Zv-p2M"/>
+                            <constraint firstItem="qfP-Fw-Eth" firstAttribute="top" secondItem="k2Y-E1-iHA" secondAttribute="top" id="xnx-Hv-ssj"/>
                             <constraint firstItem="zg0-Kt-1Ej" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="zOB-g9-GQN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -162,6 +175,7 @@
                         <outlet property="containerView" destination="k2Y-E1-iHA" id="Hfj-l4-4cr"/>
                         <outlet property="designView" destination="DZf-mM-usS" id="aa8-a9-AGQ"/>
                         <outlet property="hintLabel" destination="WSb-rm-uin" id="p35-XD-bpa"/>
+                        <outlet property="hintView" destination="qfP-Fw-Eth" id="0Zz-hs-lZw"/>
                         <outlet property="scrollView" destination="zg0-Kt-1Ej" id="r3B-mW-Dza"/>
                         <outlet property="textView" destination="VJC-L0-vuv" id="ja5-hr-iWR"/>
                         <segue destination="mFr-ri-311" kind="show" identifier="imageEditSwgue" id="h0P-ds-aVT"/>
@@ -478,30 +492,48 @@
                                         <state key="normal" title="Camera Roll">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <state key="selected">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
-                                            <action selector="CameraRollBtnTapped:" destination="8WY-QU-6sx" eventType="touchUpInside" id="123-kJ-uRe"/>
+                                            <action selector="cameraRollBtnTapped:" destination="8WY-QU-6sx" eventType="touchUpInside" id="123-kJ-uRe"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDk-lN-Nys">
                                         <rect key="frame" x="240" y="9.5" width="60" height="30"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="JHC-0h-6vu"/>
                                         </constraints>
+                                        <color key="tintColor" red="0.91764705879999997" green="0.71649145989999996" blue="0.120028148" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Colors">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <state key="selected">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="colorBtnTapped:" destination="8WY-QU-6sx" eventType="touchUpInside" id="1Nt-UQ-aTE"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qTQ-dc-u20">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qTQ-dc-u20">
                                         <rect key="frame" x="150" y="9.5" width="60" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="FXF-aI-6k8"/>
                                         </constraints>
+                                        <color key="tintColor" red="0.91764705879999997" green="0.71649145989999996" blue="0.120028148" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Filter">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
+                                        <state key="selected">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="filterBtnTapped:" destination="8WY-QU-6sx" eventType="touchUpInside" id="dj8-Av-JdP"/>
+                                        </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="saX-TL-hqu" firstAttribute="leading" secondItem="JeK-gH-KLU" secondAttribute="leading" constant="20" id="19A-Za-w1A"/>
                                     <constraint firstItem="qTQ-dc-u20" firstAttribute="centerY" secondItem="saX-TL-hqu" secondAttribute="centerY" id="1fG-sy-gyc"/>
@@ -521,6 +553,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GWu-x6-JAE"/>
                     </view>
+                    <connections>
+                        <outlet property="cameraRollButton" destination="saX-TL-hqu" id="eCR-mQ-Q0L"/>
+                        <outlet property="colorButton" destination="gDk-lN-Nys" id="nfy-lt-VMM"/>
+                        <outlet property="filterButton" destination="qTQ-dc-u20" id="x6m-Ic-JK8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hru-rT-4va" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
